--- a/app/src/app/index/index.component.html
+++ b/app/src/app/index/index.component.html
@@ -63,9 +63,12 @@
     <h1>PAINEL DE CONTROLE</h1>
     <p>Escolha uma das opções abaixo:</p>
     <ul class="options-list">
-        <li class="option-item"><a href="/movie-list" class="option-link">Filmes</a></li>
+        <!-- <li class="option-item"><a href="/movie-list" class="option-link">Filmes</a></li>
         <li class="option-item"><a href="/admin" class="option-link">Cadastrar Filme (adm)</a></li>
-        <li class="option-item"><a href="/movie-edit" class="option-link">Editar Filme (adm)</a></li>
+        <li class="option-item"><a href="/movie-edit" class="option-link">Editar Filme (adm)</a></li> -->
+        <li><a routerLink="/movie-list" class="option-link">Filmes</a></li>
+        <li><a routerLink="/admin" class="option-link">Cadastrar Filme (adm)</a></li>
+        <li><a routerLink="/movie-edit" class="option-link">Editar Filme (adm)</a></li>
     </ul>
 </div>
 </body>
